# KrunkNative

./: .gitignore  CMakeLists.txt  README.md  package.json
.github/workflows/: build.yml
assets/: README.md  skins.json
assets/maps/: burg.json  citadel.json  evacuation.json  freight.json  industry.json  kanji.json  littletown.json  lostworld.json  newtown.json  oasis.json  sandstorm.json  shipyard.json  soul_sanctum.json  subzero.json  undergrowth.json
assets/shaders/: basic.frag  basic.vert  flat.frag  flat.vert  quad.frag  quad.vert  text.frag
client/include/: client.h  fast_obj.h
client/lib/freetype/: CMakeLists.txt  README
client/lib/freetype/builds/: detect.mk  exports.mk  freetype.mk  link_dos.mk  link_std.mk  modules.mk  toplevel.mk
client/lib/freetype/builds/amiga/: README  makefile  makefile.os4  smakefile
client/lib/freetype/builds/ansi/: ansi-def.mk  ansi.mk
client/lib/freetype/builds/beos/: beos-def.mk  beos.mk  detect.mk
client/lib/freetype/builds/cmake/: FindBrotliDec.cmake  iOS.cmake  testbuild.sh
client/lib/freetype/builds/compiler/: ansi-cc.mk  bcc-dev.mk  bcc.mk  emx.mk  gcc-dev.mk  gcc.mk  intelc.mk  unix-lcc.mk  visualage.mk  visualc.mk  watcom.mk  win-lcc.mk
client/lib/freetype/builds/dos/: detect.mk  dos-def.mk  dos-emx.mk  dos-gcc.mk  dos-wat.mk
client/lib/freetype/builds/mac/: ftmac.c
client/lib/freetype/builds/meson/: extract_freetype_version.py  extract_libtool_version.py  generate_reference_docs.py  parse_modules_cfg.py  process_ftoption_h.py
client/lib/freetype/builds/os2/: detect.mk  os2-def.mk  os2-dev.mk  os2-gcc.mk
client/lib/freetype/builds/symbian/: bld.inf  freetype.mmp
client/lib/freetype/builds/unix/: configure  configure.ac  configure.raw  detect.mk  freetype-config.in  freetype2.m4  ft-munmap.m4  ftconfig.h.in  ftsystem.c  install.mk  unix-cc.in  unix-def.in  unix-dev.mk  unix-lcc.mk  unix.mk  unixddef.mk
client/lib/freetype/builds/vms/: ftconfig.h  ftsystem.c
client/lib/freetype/builds/wince/: ftdebug.c
client/lib/freetype/builds/windows/: detect.mk  ftdebug.c  ftsystem.c  w32-bcc.mk  w32-bccd.mk  w32-dev.mk  w32-gcc.mk  w32-icc.mk  w32-intl.mk  w32-lcc.mk  w32-mingw32.mk  w32-vcc.mk  w32-wat.mk  win32-def.mk
client/lib/freetype/include/: ft2build.h
client/lib/freetype/include/freetype/: freetype.h  ftadvanc.h  ftbbox.h  ftbdf.h  ftbitmap.h  ftbzip2.h  ftcache.h  ftcid.h  ftcolor.h  ftmm.h  (+35 more)
client/lib/glad/: CMakeLists.txt
client/lib/glad/src/: glad.c
client/lib/glfw/: CMakeLists.txt
client/src/: camera.c  fast_obj.c  game_window.c  loaders.c  main.c  map_mesh.c  mesh.c  player_mesh.c  prefab.c  scene.c  shader.c  ui.c
client/src/materials/: basic.c  flat.c  quad.c  text.c
client/src/net/: events.c  local_server.c  net.c
client/src/ui/: hud.c  main_menu.c  overlay.c
net-bridge/: index.ts  krunkerProxy.ts  package-lock.json  package.json  proxy.ts  publicRoutes.ts  staticFiles.ts  tsconfig.json  utils.ts  version.json
server/include/: server.h
server/src/: cli.c  events.c  main.c  net.c
shared/include/: common.h  modes.h  net.h  serde.h  shared.h  verstable.h  weapons.h
shared/lib/cJSON/: CMakeLists.txt
shared/lib/pcg_basic/: CMakeLists.txt
shared/src/: classes.c  constants.c  game.c  game_map.c  map.c  net.c  player.c  utils.c  weapons.c
shared/src/modes/: default.c  ffa.c  modes.c
shared/src/weapons/: ak47.c  akimbo.c  alien_blaster.c  awp.c  deagle.c  knife.c  lmg.c  pistol.c  rev.c  rpg.c  semi.c  shotgun.c  smg.c  weapons.c
shared/tests/: input_recorder.js  proc_input_test.c  proc_inputs_test.c
shared/tests/inputs/: collide.json  complex.json  crouch.json  jump.json  jump_forwards.json  kanji_jump_pad.json  ramp_walk_slide.json  scope.json  simple_slidehop.json  slide.json  spawn.json  walk_crouch_scope.json  walk_forwards.json  walk_ladder.json  walk_ramp.json  walk_turn_collide.json  wall_jump.json
(+431 files in other folders)
